# sentinelweb

./: .gitignore  CONTRIBUTING.md  ETHICS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: usage.md
examples/: scope.example.yaml  session.example.yaml
examples/templates/: README.md  directory-traversal-canary.yaml  header-disclosure.yaml
src/sentinelweb/: __init__.py
src/sentinelweb/cli/: main.py
src/sentinelweb/headless/: __init__.py  firefox.py  verify_xss.py
src/sentinelweb/integrations/: __init__.py  _subprocess.py  ffuf.py  httpx_tool.py  nuclei.py  sqlmap.py
src/sentinelweb/recon/: endpoints.py  ports.py  subdomains.py  tech.py
src/sentinelweb/reporting/: cvss.py  findings.py  render.py  sarif.py
src/sentinelweb/reporting/templates/: bugcrowd.j2  hackerone.j2  html_default.j2  markdown_default.j2
src/sentinelweb/scanners/: _secrets_patterns.py  cors.py  csp.py  graphql.py  headers.py  idor.py  jwt.py  redirect.py  secrets.py  sqli.py  ssrf.py  takeover.py  tls.py  xss.py
src/sentinelweb/scope/: audit.py  policy.py  session.py
src/sentinelweb/templates/: __init__.py  loader.py  runner.py  schema.py
src/sentinelweb/templates/builtin/: __init__.py  apache-server-status.yaml  dir-listing.yaml  exposed-env-file.yaml  exposed-git-config.yaml  exposed-phpinfo.yaml
src/sentinelweb/utils/: http.py  logging.py  urls.py
tests/: conftest.py
tests/unit/: test_audit.py  test_cli.py  test_cli_report.py  test_cors.py  test_csp.py  test_cvss.py  test_endpoints.py  test_findings.py  test_graphql.py  test_headers.py  test_headless_firefox.py  test_headless_verify_xss.py  test_jwt.py  test_ports.py  test_redirect.py  test_render.py  test_sarif.py  test_scope.py  test_secrets.py  test_session.py  test_sqli.py  test_takeover.py  test_tech.py  test_templates_loader.py  test_templates_runner.py  test_templates_schema.py  test_urls.py  test_xss.py
