[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "sentinelweb"
version = "0.1.0"
description = "Defensive web2 security framework for authorized bug bounty and whitehat testing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "wraithen0" }]
keywords = [
  "security",
  "bug-bounty",
  "owasp",
  "pentest",
  "whitehat",
  "vulnerability-detection",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "rich>=13.7",
  "jinja2>=3.1",
  "dnspython>=2.6",
  "tldextract>=5.1",
  "beautifulsoup4>=4.12",
  "cryptography>=42.0",
  "pyOpenSSL>=24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML",
]
headless = [
  # Optional extra: enables `sentinelweb scan --verify-xss` by driving
  # system Firefox via geckodriver. On Fedora install both binaries with
  # `sudo dnf install firefox geckodriver`; on Debian/Ubuntu use
  # `sudo apt install firefox-esr firefox-geckodriver` (or distro
  # equivalents). Selenium itself is pure-Python and ships no browser.
  "selenium>=4.20",
]

[project.scripts]
sentinelweb = "sentinelweb.cli.main:cli"

[project.urls]
Homepage = "https://github.com/wraithen0/sentinelweb"
Issues = "https://github.com/wraithen0/sentinelweb/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinelweb"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
  "integration: integration tests that hit external tools or networks",
]
